--- a/MAUICalc/MVVW/Views/CalculatorView.xaml
+++ b/MAUICalc/MVVW/Views/CalculatorView.xaml
@@ -26,7 +26,7 @@
                        FontAttributes="Bold"
                        Margin="1"
                        HeightRequest="90"/>
-                <Label Text="0"
+                <Label Text="{Binding Results}"
                        HorizontalTextAlignment="End"
                        VerticalTextAlignment="End"
                        FontSize="45"
@@ -47,7 +47,8 @@
             TextColor="Red"
             BackgroundColor="LightGray"
             FontSize="25"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickAC}">
             
         </Button>
             <Button
@@ -60,7 +61,7 @@
             BackgroundColor="LightGray"
             FontSize="30"
             FontAttributes="Bold"
-            Command="{Binding Number1}">
+            Command="{Binding ClickDelete}">
 
             </Button>
             <Button
@@ -84,7 +85,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommandDiv}">
 
             </Button>
             
@@ -103,7 +105,7 @@
             BackgroundColor="LightGray"
             FontSize="30"
             FontAttributes="Bold"
-            Command="{Binding ClickCommand}">
+            Command="{Binding ClickCommand7}">
 
             </Button>
             <Button
@@ -116,7 +118,7 @@
             BackgroundColor="LightGray"
             FontSize="30"
             FontAttributes="Bold"
-            Command="{Binding ClickCommand}">
+            Command="{Binding ClickCommand8}">
 
             </Button>
             <Button
@@ -128,7 +130,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand9}">
 
             </Button>
             <Button
@@ -140,7 +143,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommandMul}">
 
             </Button>
 
@@ -158,7 +162,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand4}">
 
             </Button>
             <Button
@@ -170,7 +175,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand5}">
 
             </Button>
             <Button
@@ -182,7 +188,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand6}">
 
             </Button>
             <Button
@@ -194,7 +201,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommandMin}">
 
             </Button>
 
@@ -212,7 +220,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand1}">
 
             </Button>
             <Button
@@ -224,7 +233,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand2}">
 
             </Button>
             <Button
@@ -236,7 +246,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand3}">
 
             </Button>
             <Button
@@ -248,7 +259,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommandAdd}">
 
             </Button>
 
@@ -266,7 +278,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommand0}">
 
             </Button>
             <Button
@@ -278,7 +291,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickCommandPoint}">
 
             </Button>
             <Button
@@ -290,7 +304,8 @@
             TextColor="Black"
             BackgroundColor="LightGray"
             FontSize="30"
-            FontAttributes="Bold">
+            FontAttributes="Bold"
+            Command="{Binding ClickEquals}">
 
             </Button>           
 
